Fixed .gitattributes so GitHub recognize the project language as Java, fixed run task and updated gradle to version 6.0.1