@@ -41,31 +41,28 @@ Simply pass in the new version as well as the distribution type, either
 ships with the binaries.
 
 ```bash
-./gradlew wrapper --gradle-version 5.4.1 --distribution-type bin
-./gradlew wrapper --gradle-version 5.5 --distribution-type all
+./gradlew wrapper --gradle-version 6.0.1 --distribution-type bin
+./gradlew wrapper --gradle-version 6.0.1 --distribution-type all
 ```
 
 ## Setup gradle properties
 
 Edit default gradle properties in file: ***$HOME/.gradle/gradle.properties***
 
-For example on Windows you can set default system encoding to UTF-8,
-set gradle console output to plain mode,
-set running gradle builds without gradle daemon, and
-avoid groovy warning "An illegal reflective access operation has occurred" by
-set --illegal-access=deny.
+For example you can set gradle console output to plain mode,
+set running gradle builds without gradle daemon.
 
 ```properties
 org.gradle.daemon = false
 org.gradle.parallel = true
 org.gradle.console = plain
-org.gradle.jvmargs = -Xms256m -Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.jvmargs = -Xms512m -Xmx1024m
 ```
 
 Or you can set above settings by export environment variable GRADLE_OPTS:
 
 ```bash
-export GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true -Dorg.gradle.console=plain -Dfile.encoding=UTF-8 -Xms256m -Xmx1024m"
+export GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true -Dorg.gradle.console=plain -Xms512m -Xmx1024m"
 ```
 
 ## Display available tasks
